--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ resumefile: assets/resume.pdf
     <header id="home" class="hero">
         <div class="hero-body">
             <div class="hero-text text-center">
-                <h1 class="editable">I'm Iskender Piyale-Sheard</h1>
+                <h1 class="editable">I'm Iskender</h1>
                 
                 <h1 class="small"><span id="js-rotating">
                     {{ page.occupation }}
