--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ occupations:
     - title: "Creative Developer"
     - title: "UI / UX Designer"
     - title: "Professional Ballerina"
+    - title: "Superman"
+
 resumefile: assets/resume.pdf
       
 ---
@@ -151,12 +153,12 @@ resumefile: assets/resume.pdf
                                 <div class="col-sm-6 col-md-5">
                                     <h4 class="editable">Contact Details</h4>
 
-                                    <ul class="list-unstyled text-grey editable">
-                                        <li>Nick Berg</li>
-                                        <li>123 Water Seven, Grand Line</li>
-                                        <li>+123 456 7890</li>
-                                        <li>hello@nickberg.com</li>
-                                        <li>www.nickberg.com</li>
+                                    <ul class="list-unstyled text-grey">
+                                        <li class="editable">Nick Berg</li>
+                                        <li class="editable">123 Water Seven, Grand Line</li>
+                                        <li class="editable">+123 456 7890</li>
+                                        <li class="editable">hello@nickberg.com</li>
+                                        <li class="editable">www.nickberg.com</li>
                                     </ul>
                                 </div>
                                 <!-- //.col-md-5 -->
