Updated '/index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ social:
                                 <div class="col-sm-6 col-md-5">
                                     <h4 class="editable">Contact Details</h4>
 
-                                    <ul class="list-unstyled text-grey editable">
+                                    <ul class="list-unstyled text-grey">
                                         <li class="editable">{{ page.fullname }}</li>
                                         <li class="editable">123 Water Seven, Grand Line</li>
                                         <li class="editable">+123 456 7890</li>
