Upload Resume Path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ email: johnsmith@example.com
 profilepic_path: assets/images/profile-picture-2.jpg
 background_image_path: assets/images/bg-hero.jpg
 title: Resume Template
-upload_resume: assets/resume.pdf
+upload_resume_path: assets/resume.pdf
 occupations:
     - title: Creative Developer
     - title: UI / UX Designer
@@ -223,7 +223,7 @@ social:
                                 <!-- //.col-md-5 -->
 
                                 <div class="col-sm-6 col-md-7">
-                                    <a href="{{ page.upload_resume }}" class="btn btn-lg btn-custom">
+                                    <a href="{{ page.upload_resume_path }}" class="btn btn-lg btn-custom">
                                         <i class="icon-File-Download"></i> Download Resume
                                     </a>
                                 </div>
